--- a/Docker/Nginx_Conf/Task12/var/www/task3/html/index.html
+++ b/Docker/Nginx_Conf/Task12/var/www/task3/html/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Success!!!!  The musiify.site server block is working!!!!!</h1>
 	<div>
-	<a href="/secondpage">Click here to comlete task1!</a>
+	<a href="/secondpage">Click here to comlete task1!!!!!!!!!!!!</a>
 	</div>
 	<div>
 	<a href="/thirdpage" download="Троян.mp3">Download task2</a>
